# bugpal

./: LICENSE  README.md  calls.txt  docker-compose.yml  pyproject.toml  roadmap  to_do.txt
alembic/: env.py
alembic/versions/: 0fd79f52f5ae_add_fix_and_vote_models.py  9e4256eb6aa8_initial_migration.py
bugpal_app/: depedencies.py  main.py
bugpal_app/api/v1/routes/: issues.py  users.py
bugpal_app/api/v1/schemas/: fix.py  user.py
bugpal_app/core/: config.py
bugpal_app/db/: session.py
bugpal_app/dto/: issue.py  user.py  vote.py
bugpal_app/models/: __init__.py  fix.py  issue.py  user.py  vote.py
bugpal_app/repos/: fix.py  issue.py  user.py  vote.py
bugpal_app/routers/: health.py
bugpal_app/services/: issue.py  user.py
